# HeaderTool

./: .gitignore  README.md  concept.py  index.json  lightweight.py  local.py  main.cpp  process.py  smb1-level-edit.md
.github/workflows/: python-publish.yml
Linux/Lite/x64/DEBIAN/: control
Linux/Lite/x86/DEBIAN/: control
Linux/x64/DEBIAN/: control
Linux/x86/DEBIAN/: control
Python/: HeaderTool.py  README.md  lightweight.py  pyproject.toml  setup.py
Python/HeaderTool/: README.md  __init__.py
Source/: HeaderTool.py  HeaderToolL.cpp  Headertool.cpp
Windows/: README.md  backend.cpp  cli.cpp  gui.cpp  installable.cpp  main.cpp
Windows/64 bit/: bs.txt
headers/: 1001594424  1002435494  1004684527  1005132323  1005934950  1012695508  1014905077  10155710  101993290  1019960663  1020572704  1020705550  1022786284  1022839262  1024038578  1025257783  1025263764  1027601731  10276196977  1028351217  1029064535  10326515717  1033230438  1034029150  1035824559  1036704322  103708727649  1040229235  1041396181  1041696520  1044844512  1045997694  1046079825  104748627  1048075715  104885945  1049999909  105025505332  105111634985  1053441498  (+2852 more)
