[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry.scripts]
headertool = "headertool.main:main"

[project]
name = "headertool"
version = "1.0.9"
authors = [
  { name="Brette", email="brette.allen05@gmail.com" },
]
description = "Headers and renames your ROMs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BrettefromNesUniverse/HeaderTool"
"Bug Tracker" = "https://github.com/BrettefromNesUniverse/HeaderTool/issues"